# WebWeaver

./: .coveragerc  .executor_coveragerc  .gitignore  .pylintrc  CMakeLists.txt  README.md  SECURITY.md  pyproject.toml  test.py  test2.py  test_suite.json  webweaver_executor.spec  webweaver_studio.spec
.github/workflows/: validate_codebase.yml
artwork_resources/studio/: generate_browser_icons.py  generate_explorer_panel_icons.py  generate_playback_toolbar_icons.py  generate_recording_toolbar_icons.py  generate_splash_logo.py  generate_toolbar_icons.py  png_to_header.py
data_dog/: database_backend.py
data_dog/core/: database_backend.py  database_backend_loader.py
example_configurations/: webweaver_config.json  webweaver_config.schema.json
executor/: ITest.py  executor_exceptions.py  suite_parser.py  suite_schema.json  test_decorators.py  test_executor.py  test_result.py  test_status.py
inspector/: browser_controller.py  inspector.py  inspector_frame.py
inspector/js/: inspector.js
inspector/test/: browser_icons.py  modal.py  modal2.py  trial.py
inspector/tool_browser_icons/: generate_browser_icons.py
postman/: Weavegate.postman_collection.json
src/: WebWeaver.sln
src/WebWeaverExecutor/: SuiteParser.cpp  SuiteParser.h  WebWeaverExceptions.h  WebWeaverExecutor.vcxproj  WebWeaverExecutor.vcxproj.filters  main.cpp
src/studio/: BitmapUtils.cpp  BitmapUtils.h  BrowserController.cpp  BrowserController.h  BrowserLaunchOptions.cpp  BrowserLaunchOptions.h  BrowserType.h  CMakeLists.txt  ExplorerNodeData.h  FilesystemUtils.cpp  FilesystemUtils.h  MainWindow.cpp  MainWindow.h  Platform.cpp  Platform.h  ProjectWizardControlIDs.h  RecentSolutionsManager.cpp  RecentSolutionsManager.h  RecordingMetadata.cpp  RecordingMetadata.h  RecordingSession.cpp  RecordingSession.h  RecordingViewContext.h  RecordingViewerPanel.cpp  RecordingViewerPanel.h  SolutionExplorerIcons.cpp  SolutionExplorerIcons.h  SolutionExplorerNodeData.h  SolutionExplorerPanel.cpp  SolutionExplorerPanel.h  StudioDefinitions.h  StudioMainFrame.cpp  StudioMainFrame.h  StudioSolution.cpp  StudioSolution.h  StudioStateController.cpp  StudioStateController.h  ToolbarIcons.cpp  ToolbarIcons.h  UUID.cpp  (+13 more)
src/studio/ProjectCreateWizard/: BrowserIcons.h  ProjectCreateWizardBasePage.h  WizardBasicInfoPage.cpp  WizardBasicInfoPage.h  WizardBehaviourPage.cpp  WizardBehaviourPage.h  WizardFinishPage.cpp  WizardFinishPage.h  WizardSelectBrowserPage.cpp  WizardSelectBrowserPage.h
src/studio/SolutionCreateWizard/: BrowserIcons.cpp  BrowserIcons.h  SolutionCreateWizardBasePage.h  WizardBasicInfoPage.cpp  WizardBasicInfoPage.h  WizardBehaviourPage.cpp  WizardBehaviourPage.h  WizardFinishPage.cpp  WizardFinishPage.h  WizardSelectBrowserPage.cpp  WizardSelectBrowserPage.h
src/studio/imgResources/BrowserLogos/: browser_google_chrome_icon.h
src/studio/imgResources/toolbar/: toolbar_inspect.h  toolbar_new_project.h  toolbar_open_project.h
src/studio/project_create_wizard/: WizardBasicInfoPage.cpp  WizardSelectBrowserPage.cpp
src/studio/recording/: RecordingEvent.h  RecordingEventType.cpp  RecordingEventType.h  RecordingSession.cpp  RecordingSession.h
studio/: README.md  bitmap_utils.py  browser_launch_options.py  recording_metadata.py  recording_view_context.py  recording_viewer_panel.py  solution_explorer_icons.py  solution_explorer_node_data.py  solution_explorer_panel.py  studio.py  studio_main_frame.py  studio_solution.py  studio_state_controller.py  toolbar_icons.py  wizard_base_page.py  wizard_step_indicator.py  workspace_panel.py
studio/browsing/: browser_type.py  fact.py  studio_browser.py  web_driver_factory.py  web_driver_option_binding.py  web_driver_option_parameter.py  web_driver_option_parameters.py  web_driver_option_target.py
studio/persistence/: solution_persistence.py
studio/project_create_wizard/: browser_icons.py  project_create_wizard_data.py  project_create_wizard_dialog.py  project_create_wizard_step_indicator.py  trial_1.py  wizard_basic_info_page.py  wizard_finish_page.py  wizard_ids.py  wizard_web_behaviour_page.py  wizard_web_select_application_dialog.py  wizard_web_select_browser_page.py
studio/recording/: recording_event_type.py  recording_session.py
studio/solution_create_wizard/: solution_create_wizard_data.py  solution_creation_page.py  wizard_basic_info_page.py  wizard_behaviour_page.py  wizard_finish_page.py  wizard_select_browser_page.py
studio/ui/: main_toolbar.py  studio_main_frame.py  workspace_panel.py
test_harness/: executor_test.py  listener_test.py  main.py
unit_tests/: main.py  test_base_web_control.py  test_radio_button_control.py  test_suite_parser.py  test_test_decorators.py  test_test_executor.py  test_test_listener.py  test_test_result.py  test_web_driver.py  test_web_driver_option_parameter.py
unit_tests/executor/: main.py  test_test_suite_normalisation.py  test_test_suite_suite_loader.py  test_test_suite_suite_parser.py  test_test_suite_suite_validator.py
visual_tester/: connection.py  node.py  node_canvas.py  node_editor_frame.py  node_picker.py  node_pin.py  node_registry.py  node_type.py  node_types.py  preferences_dialog.py  prototype.py
web_weaver/: __init__.py  base_dropdown_control.py  base_web_control.py  browser_type.py  exceptions.py  main.py  multiselect_dropdown_control.py  pyproject.toml  requirements.txt  textbox_control.py  web_driver.py  web_driver_option_parameters.py
webweaver/: version.py
webweaver/common/: assertion.py  assertion_operator.py
webweaver/executor/: assertions.py  discoverer.py  executor_exceptions.py  main.py  suite_parser.py  test_result.py  (+5 more)
(+228 files in other folders)
